@@ -1,3 +1,7 @@
+2006-11-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/: Messages now use \code{ngettext}.
+
 2006-11-03  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* R/: Added functions for modifying and removing metadata.
